Small fixes for Z-index based on last commit, landing page animations started

--- a/src/components/scss/_partials/animations.scss
+++ b/src/components/scss/_partials/animations.scss
@@ -4,12 +4,10 @@
 /* page fade in */
 @keyframes fullPageFadeIn {
     0% {
-        opacity: 0;
-				transform: translateY(-10px);
+		transform: translateY(-10px);
     }
     100% {
-        opacity: 1;
-				transform: translateY(0px);
+		transform: translateY(0px);
     }
 }
 
@@ -98,6 +96,17 @@
 	to {width: 0}
 }
 
+@keyframes landingFadeIn{
+	0% {
+        opacity: 0;
+		transform: translateX(-25%);
+    }
+    100% {
+        opacity: 1;
+		transform: translateX(0);
+    }
+}
+
 .fade-in {
 	animation: 0.5s ease-out 0s 1 forwards fadeIn;
 }
@@ -112,6 +121,11 @@
 
 .fullpage-fade-out{
 	animation: 0.5s ease-out 0s 1 fullPageFadeOut;
+}
+
+.landing-fade-in{
+	opacity: 0;
+	animation: 1s ease-in-out 0.5s 1 forwards landingFadeIn;
 }
 
 .cover-lift {
