--- a/src/components/scss/_partials/base.scss
+++ b/src/components/scss/_partials/base.scss
@@ -208,7 +208,7 @@ li>a{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 3;
+	z-index: 5;
 }
 
 .img-responsive{
